--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/amqplib": "^0.8.2",
+    "amqplib": "^0.8.0",
     "aws-sdk": "^2.1096.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
