--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^2.2.0",
     "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.4.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "@types/amqplib": "^0.8.2",
+    "amqp-connection-manager": "^4.1.1",
     "amqplib": "^0.8.0",
     "aws-sdk": "^2.1096.0",
     "class-transformer": "^0.5.1",
